logs/Slang/generated/keywords/5.6.2--keyword_interface.sv.log
name: interface
description: The 'interface' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_interface.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_interface.sv:8:8: error: expected declarator
    bit interface;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_interface.sv:8:18: error: expected identifier
    bit interface;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_interface.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_interface.sv:9:10: error: expected 'endinterface'
endmodule
         ^
